# loupe-platform

./: .dockerignore  .gitignore  README.md  cloudbuild.api.yaml  pyproject.toml
api/: Dockerfile  README.md  __init__.py  dependencies.py  main.py  models.py
api/routes/: governance.py  loupe.py  triage.py
api/services/: __init__.py  governance_helper.py  governance_review.py  loupe_overview.py  triage_helper.py  triage_playbook.py  triage_sql_sandbox.py  triage_warehouse.py
apps/data_quality_triage/: anomaly_engine.py  chat.py  checks.py  explanations.py  incident_lifecycle.py  main.py  models.py  persistence.py  profiling.py  remediation.py  seed_incidents.py  sql_checks.py  sql_sandbox.py  ui.py
apps/loupe_agent/: chat.py  main.py  metrics.py  scenarios.py  source_health.py  ui.py  validation.py
apps/metric_governance/: chat.py  definition_diff.py  explanations.py  main.py  models.py  persistence.py  remediation.py  review.py  ui.py
docs/: CODEX_HANDOFF.md  DEPLOYMENT.md  PHASE_5_HANDOFF.md  PHASE_6B_HANDOFF.md  PHASE_6E_CUTOVER_CHECKLIST.md  UI_PRODUCT_DIRECTION_RECOVERED.md  architecture.md  contracts.md  data-quality-triage.md  development.md  frontend.md  loupe-agent.md  metric-governance.md  persistence.md
docs/ui-reference/: IMPLEMENTATION_MAPPING.md  VISUAL_ACCEPTANCE.md  approved-ui-mockup.html
frontend/: .env.example  package-lock.json  package.json
shared/: audit.py  audit_persistence.py  config.py  data_service.py  incident_persistence.py  incidents.py  metric_catalog.py  metric_catalog_persistence.py  metric_hashing.py  models.py  persistence_bootstrap.py  persistence_transactions.py  schema_baseline_persistence.py  schema_hashing.py  schema_management.py  trust_scoring.py
tests/: test_cross_app_workflow.py  test_honest_failure_validation.py  test_import_smoke.py  test_packaging.py  test_persistence_boundary.py  test_phase6b_spike_validators.py
tests/api/: test_governance_helper.py  (+6 more)
tools/: __init__.py
(+81 files in other folders)
